--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,30 @@ color: #434455;
 background-color: #fff;
 }
 
+.container {
+        max-width: 1158px;
+        padding: 0 15px;
+        margin: 0 auto;
+}
+
 ul{
-    list-style-type: none;
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
 }
 
 a {
-    text-decoration: none;
+        text-decoration: none;
+}
+
+h1,h2,h3,h4,h5,h6,p {
+        margin: 0;
+}
+
+img {
+        display: flex;
+        max-width: 100%;
+        height: auto;
 }
 
 .section-title {
@@ -21,24 +39,48 @@ a {
         text-transform: capitalize;
         color: #2e2f42;
 }
+
+.section {
+        padding: 120px 0;
+}
 /* ------------------------HEADER--------------------- */
 
+.header {
+        border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
+        display: flex;
+        align-items: center;
+}
+
+.navigation {
+        display: flex;
+        align-items: center;
+}
+
 .logo {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
+        font-family: "Raleway", sans-serif;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 1.17;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: #4d5ae5;
+        margin-right: 76px;
 }
 
 .accent-header {
         color: #2e2f42;
 }
 
+.nav-list {
+        display: flex;
+        gap: 40px;
+}
+
 .accent-footer {
-    color: #f4f4fd;
+        color: #f4f4fd;
 }
 
 .header-nav {
@@ -47,10 +89,18 @@ a {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #2e2f42;
+        padding: 24px 0;
+        display: block;
 }
 
 .header-address {
-    font-style: normal;
+        font-style: normal;
+        margin-left: auto;
+}
+
+.address-list {
+        display: flex;
+        gap: 40px;
 }
 
 .header-contacts {
@@ -72,7 +122,9 @@ text-decoration: underline;
 /* -----------------------Order Service----------------------- */
 
 .service-section {
-    background-color: #2e2f42;
+        background-color: #2e2f42;
+        padding-top: 188px;
+        padding-bottom: 188px;
 }
 
 .main-title {
@@ -81,6 +133,7 @@ text-decoration: underline;
         letter-spacing: 0.02em;
         text-align: center;
         color: #fff;
+        margin-bottom: 48px;
 }
 
 .btn-order {
@@ -91,15 +144,39 @@ text-decoration: underline;
         color: #fff;
         background-color: #4d5ae5;
         cursor: pointer;
+        display: block;
+        margin: 0 auto;
 }
 
 .btn-order:hover, .btn-order:focus {
-    background-color: #404bbf;
+        background-color: #404bbf;
 }
 
 /* ------------------------------------------------ */
 
 /* -----------------FEATURES------------------------------- */
+.invisible-features {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        border: 0;
+        padding: 0;
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;
+}
+
+.features-container-list {
+        display: flex;
+        flex-wrap: wrap;
+}
+
+.features-list {
+        flex-basis: calc((100% - 72px) / 4);
+        max-width: 264px;
+}
 
 .features-title {
         font-weight: 500;
@@ -107,6 +184,7 @@ text-decoration: underline;
         line-height: 1.2;
         letter-spacing: 0.02em;
         color: #2e2f42;
+        margin-bottom: 8px;
 }
 
 .features-text {
@@ -121,11 +199,11 @@ text-decoration: underline;
 /* ---------------------OUR TEAM--------------------------- */
 
 .team-section {
-    background-color: #F4F4FD;
+        background-color: #F4F4FD;
 }
 
 .team-item {
-    background-color: #fff;
+        background-color: #fff;
 }
 
 .team-name {
@@ -135,6 +213,8 @@ text-decoration: underline;
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
+        padding-top: 32px;
+        margin-bottom: 8px;
 }
 
 .team-prof {
@@ -143,6 +223,7 @@ text-decoration: underline;
         letter-spacing: 0.02em;
         text-align: center;
         color: #434455;
+        padding-bottom: 32px;
 }
 
 /* ------------------------------------------------ */
@@ -150,7 +231,7 @@ text-decoration: underline;
 /* -----------------------PORTFOLIO------------------------- */
 
 .portfolio-section {
-    background-color: #fff;
+        background-color: #fff;
 }
 .prtfolio-name {
         font-weight: 500;
@@ -170,10 +251,18 @@ text-decoration: underline;
 /* ------------------------------------------------ */
 .footer {
         background-color: #2e2f42;
+        padding-top: 100px;
+        padding-bottom: 100px;
 }
 .footer-text {
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #f4f4fd;
+}
+
+.porfolio-item {
+        border-bottom: 1px solid #e7e9fc;
+        border-left: 1px solid #e7e9fc;
+        border-right: 1px solid #e7e9fc;
 }
